--- a/IPL-Booking-Email-App/src/main/resources/application.properties
+++ b/IPL-Booking-Email-App/src/main/resources/application.properties
@@ -6,9 +6,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 
 #Actual username, password of sender
-spring.mail.username=charanmail800@gmail.com
-spring.mail.password=taxcpbftzyxedpbe
-#pwd: charanspringmail
+spring.mail.username=**
+spring.mail.password=**
 
 #Property to trigger smtp
 spring.mail.properties.mail.smtp.auth=false
